# Accelerating-Attention-Mechanisms-in-CNNs-Using-HPC

./: CMakeLists.txt  README.md  requirements.txt  setup.py  test_import.py
attention_cnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py
src/cpp/: CMakeLists.txt  attention.cpp  attention.hpp  attention_cuda.cu  attention_cuda.hpp  attention_openmp.cpp  attention_openmp.hpp  python_binding.cpp
src/python/: __init__.py  attention_cnn.py  attention_layer.py  hybrid_attention.py  hybrid_train.py  train.py  train_with_plotting.py
